# zellijls

./: CONTEXT.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/adr/: 0001-panes-from-process-tree-and-metadata-kdl.md
docs/superpowers/plans/: 2026-05-11-narrow-terminal-task-truncation.md
docs/superpowers/specs/: 2026-05-11-narrow-terminal-task-truncation-design.md
scripts/: install.sh
src/: age.rs  agent.rs  collect.rs  display.rs  json_output.rs  main.rs  model.rs  pick.rs  procs.rs  session_info.rs  tty_age.rs  watch.rs
