[package]
name = "zellijls"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38"
netstat2 = "0.11"
unicode-width = "0.2"
crossterm = "0.29"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[profile.release]
strip = true
lto = true
